# numan

./: .bobignore  .clineignore  .devinignore  .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Phase6Plan.md  Phase7Plan.md  README.md  deny.toml
.commandcode/taste/: taste.md
.github/: ABOUT.md  FUNDING.yml
.github/instructions/: review.instructions.md
.github/workflows/: active-plugin-update-acceptance.yml  ci.yml  claude-code-review.yml  cline-pr-review.yml  codeql.yml  official-registry-acceptance.yml  release.yml
assets/nushell-loader/: NOTICE  loader.nu
docs/: PACKAGING.md  RELEASING.md  active-plugin-gate.md  numan-doctor.md  nupm-compatibility.md  registry-intake-roadmap.md  snapshots-and-rollback.md
docs/acceptance/: active-plugin-update-real-nu.md  official-registry-stage1.md
docs/adr/: 0001-ecosystem-trust-upstream-contribution-fork-stewardship.md
docs/plans/: 2026-07-12-autoload-journal-recovery.md  2026-07-19-next-steps-code.md  2026-07-19-six-month-strategy-audit.md  Phase4Plan.md  Phase7Plan.md
packaging/homebrew/: README.md  numan.rb
packaging/homebrew-tap/: README.md
packaging/winget/: README.md
scripts/: release-notes-from-changelog.sh  sync-homebrew-tap.sh  update-official-trust-root.sh
src/: cli.rs  config.rs  lib.rs  main.rs
src/cmd/: activate.rs  completions.rs  deactivate.rs  doctor.rs  gc.rs  info.rs  init.rs  install.rs  list.rs  mod.rs  nu_pin_offer.rs  (+9 more)
tests/: activate_test.rs  completions_test.rs  doctor_test.rs  init_test.rs  install_test.rs  module_autoload_test.rs  nupm_compat_test.rs  nupm_real_nu_test.rs  official_registry_stage1.rs  plugin_active_update_real_nu.rs  plugin_deactivate_real_nu.rs  plugin_lifecycle_real_nu.rs  setup_nu_test.rs  setup_test.rs
(+96 files in other folders)
