[package]
name = "numan-cli"
version = "0.1.4"
edition = "2021"
rust-version = "1.88"
description = "A cross-platform package manager for Nushell"
license = "MIT"
repository = "https://github.com/tonythethompson/numan"
homepage = "https://github.com/tonythethompson/numan"
documentation = "https://github.com/tonythethompson/numan#readme"
readme = "README.md"
keywords = ["nushell", "package-manager", "cli"]
categories = ["command-line-utilities"]
authors = ["Anthony Thompson"]
exclude = [
    ".github/**",
    "tests/fixtures/**",
    "Phase*.md",
    ".tmp*",
]

[[bin]]
name = "numan"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_complete_nushell = "4"
indicatif = "0.17"
console = "0.15"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP + Downloads
reqwest = { version = "0.12", features = ["blocking"] }

# Archive extraction
tar = "0.4"
flate2 = "1"
xz2 = "0.1"
zip = "2"
globset = "0.4"

# Integrity
sha2 = "0.10"
hex = "0.4"

# Ed25519 signatures
ed25519-dalek = { version = "2", features = ["pkcs8", "rand_core"] }
base64 = "0.22"

# Version handling
semver = { version = "1", features = ["serde"] }

# Platform
dirs = "6"

# Error handling
anyhow = "1"
thiserror = "2"

# Temp files
tempfile = "3"

# Advisory filesystem locks (mutation serialization)
fd-lock = "4"

# Stable collision-resistant snapshot IDs
uuid = { version = "1", features = ["v7", "v4"] }

# Git (for source builds and registry sync)
git2 = "0.21"

[dev-dependencies]
tempfile = "3"
rand_core = { version = "0.6", features = ["getrandom"] }
libc = "0.2"
wait-timeout = "0.2"
